--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^6.1.0",
+    "@elevenlabs/client": "^0.12.1",
     "@tanstack/react-query": "^5.90.12",
     "antd": "^6.1.0",
     "axios": "^1.13.2",
